Fix scrollbar in messages, add new mixin for list items to trigger scrollbar change.

--- a/app/stylesheets/components/_scroller.scss
+++ b/app/stylesheets/components/_scroller.scss
@@ -51,7 +51,6 @@
 .scroller .overview{
   position: relative;
   height: auto;
-  padding-bottom: 40px;
 }
 
 .noselect {
